[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MassMolKit"
version = "0.1.0"
description = ""
authors = [
    { name = "Motohiro Ogawa", email = "makakonto0503@outlook.jp" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "rdkit"
]

[tool.setuptools.packages.find]
where = ["."]
